--- a/TP2/EntregaFinal/css/card.css
+++ b/TP2/EntregaFinal/css/card.css
@@ -2,6 +2,9 @@ section.sm{
 
   display: flex;
   gap: 40px;
+  padding-block: 16px;
+
+  /* width: 1; */
 
   overflow-x: scroll;
 
@@ -73,10 +76,10 @@ section.sm{
     > .black{
       background-color: rgba(0, 0, 0, 80%);
       border-radius: 20px;
-      overflow: hidden;
+      /* overflow: hidden; */
       opacity: 0;
-      width: 100%;
-      height: 100%;
+      width: 195px;
+      height: 130px;
       transition: opacity 200ms ease-out;
     }
 
